Add .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,44 @@
 # Dependencies
 node_modules/
+
+# Logs
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+*.db
+todos.db
+*.sqlite
+*.sqlite3
 
 # Environment variables
 .env
 .env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Database files
-*.db
-todos.db
-*.sqlite
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# Editor/IDE files
+# IDE/Editor
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# Logs
-logs/
-*.log
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+
+# Deployment
+dist/
+build/
