--- a/package.json
+++ b/package.json
@@ -3,25 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines": {
-    "node": ">=18.0.0"
-  },
-
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "nodemon": "^5.2.1",
-    "sqlite3": "^5.1.6"
+    "nodemon": "^5.2.1"
   }
 }
